--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "docs",
+            "outputPath": "dist/SoftwareMFront-1",
             "baseHref": "/",
             "index": "src/index.html",
             "browser": "src/main.ts",
