fix: angular.json , vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
-  "builds": [
+  "buildCommand": "ng build --configuration=production",
+  "outputDirectory": "dist/SoftwareMFront-1/browser",
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "outputDirectory": "dist/SoftwareMFront-1/browser"
+  ]
 }
