--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^17.3.7",
     "boostrap": "^2.0.0",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "login-java": "file:",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
@@ -30,11 +31,12 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.7",
-    "@angular/cli": "^17.3.15",
+    "@angular-devkit/build-angular": "^19.2.8",
+    "@angular/cli": "^17.3.16",
     "@angular/compiler-cli": "^17.3.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^18.18.0",
     "angular-cli-ghpages": "^2.0.1",
     "jasmine-core": "~5.1.0",
